# fsmp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.claude/skills/author-fsmp-workflow/: SKILL.md  fsmp-definition.yaml
.claude/skills/author-workflow/: SKILL.md  authoring-machine.yaml
.claude/skills/dev-cycle/: README.md  SKILL.md  fsmp-definition.yaml  machine-definition.yaml
.github/workflows/: ci.yml
docs/: definition.md  driving.md
examples/dev-cycle/: README.md  machine-definition.yaml
src/: engine.rs  guide.rs  lib.rs  lint.rs  main.rs  model.rs  render.rs  store.rs
tests/: authoring.rs  dev_cycle.rs  guide.rs  lint.rs
tests/fixtures/: dev-cycle.skill.md  dev-cycle.yaml
