[package]
name = "fsmp"
version = "0.1.0"
edition = "2021"
description = "FSM Prompter — a CLI that steers AI agents through workflows by re-prompting them at each transition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamesmacaulay/fsmp"
readme = "README.md"
keywords = ["fsm", "state-machine", "workflow", "agent", "prompt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fsmp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
